# musip

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  mkdocs.yml
.gitea/workflows/: docs.yml
.github/workflows/: docs.yml  ghdl.yml  tests.yml
analyzer/: AnaFillHits.cpp  AnaFillHits.h  AnaMusip.cpp  AnaMusip.h  AnaMutrigHistos.cpp  AnaMutrigHistos.h  AnaQuadHistos.cpp  AnaQuadHistos.h  AnalyzerEquipment.cpp  AnalyzerEquipment.h  CMakeLists.txt  HitVectorFlowEvent.cpp  HitVectorFlowEvent.h  analyzer.cpp  config.json  hits.h  root_helpers.h
custom/: MuSiPinit.js  Mudas.html  Mudas.js  MudasMusip.js  RunLog.html  link_constants.js  lvds.html  lvds.js  mgui.js  mplot.js  msetpoint.html  msetpoint.json  onlineDQM.html  onlineDQM.js  quads.css  quads.html  quads.js
custom/Mutrig/: Actions.js  BoardControl.js  ChannelSelection.js  ChipConfiguration.js  DQM-PlotManager.js  LVSuppliesTable.js  Matrix-Channelmapping.json  MuSR-Channelmapping.json  MuSR-Scint.FCStd  TimingScint.html  Utility.js
custom/Quads/: quad_actions.js  quad_basics.html  quad_basics.js  quad_configuration.js  quad_dacs.js  quad_dacs_old.js  quad_dqm.js  quad_general_container.js  quad_masking.js  quad_selection.js  quad_slowcontrol.js  quad_utility.js  quads.css  tabs.css
custom/tabs/: CCR_tab.html  LEM_Editor.html  RunControl_tab.html  Sequencer_tab.html  TDC_tab.html  TDCconfiguration.js  Vacuum_tab.html
docs/: Doxyfile  pixel_tuning.md  requirements.txt  setup.md  swb_dma_capture.md
docs/registers/: a10_pcie_registers.md  feb_sc_registers.md  lvds_registers.md  midas_format.md  mupix_registers.md  mutrig_registers.md  opq_jtag_csr.md  sorter_registers.md
firmware/a10_board/: .gitignore  Makefile  README.md  assignments  nios.tcl  top.qip  top.sdc  top.vhd
firmware/a10_tcl/: README.md  fill_memory.tcl  program.sh  program.tcl  program_gui.sh  program_gui.tcl  util.tcl
firmware/include/: feb_sc_registers.h  feb_sc_registers.md  scifi_registers.h  scifi_registers.md
firmware/util/: clkmon.vhd  (+49 more)
midas_fe/: CMakeLists.txt  bits_utils.h  constants.h  generate_tdacs.py  mask_edge.h  missing_hardware.h  missing_hardware_software_only.h  odb_setup.h  quad_fe.cpp  quads_config_fe.cpp  quads_data_fe.cpp  readout_fe.cpp  registers.h  utils.h
midas_fe/danfysik_magnet_scfe/: CMakeLists.txt  danfysik_magnet_scfe.cxx
midas_fe/hc3500_scfe/: CMakeLists.txt  hc3500.cxx  hc3500.h  hc3500_scfe.cxx
midas_fe/hv_control/: CMakeLists.txt
midas_fe/hv_control/src/: hvBox_quads_fe.cxx  hv_fe.cxx  hv_kip_fe.cxx  mdev_hv4.cxx  mdev_hv4.h  mdevice_mscbhv4.h
midas_fe/kerneldriver/: .gitignore  CMakeLists.txt  compactify.sh  load_mudaq.sh  mudaq.c  mudaq.h  mudaq_fops.h  recover_pcie.sh
midas_fe/kerneldriver/dmabuf/: chrdev.h  dmabuf.h  dmabuf_platform_device.h  dmabuf_platform_driver.h  module.h  test.h  test_mmap.cpp
midas_fe/kerneldriver/kerneldriver/: Makefile  mudaq.h
midas_fe/libmudaq/: CMakeLists.txt  DummyFEBSlowcontrolInterface.cpp  DummyFEBSlowcontrolInterface.h  FEBSlowcontrolInterface.cpp  FEBSlowcontrolInterface.h  Mutrig3Config.cpp  Mutrig3Config.h  asic_config_base.cpp  asic_config_base.h  mudaq_circular_buffer.hpp  mudaq_device.cpp  mudaq_device.h  mutrig_config.h  utils.h
midas_fe/ls340_scfs/: CMakeLists.txt  LakeShore340.cxx  LakeShore340.h  ls340_scfe.cxx
midas_fe/mudaq-dkms/: 99-mudaq.rules  Kbuild  Makefile  README.md  dkms.conf.in  install-dkms.sh  mudaq-dkms-boot  mudaq-dkms-boot.service  mudaq-load.service  mudaq.c  mudaq.conf.modules-load  mudaq_fops.h  recover-pcie-dkms.sh  registers.h  reload-mudaq.sh  remove-dkms.sh  verify-mudaq.sh
midas_fe/mudaq-dkms/dmabuf/: dmabuf_fops.h
midas_fe/mudaq-dkms/registers/: a10_counters.h  a10_pcie_registers.h  lvds_registers.h  mupix_registers.h  sorter_registers.h
midas_fe/omega_scfe/: CMakeLists.txt  omega_scfe.cxx
midas_fe/power/: BaseClient.cpp  BaseClient.h  CMakeLists.txt  GenesysDriver.cpp  GenesysDriver.h  HMP4040Driver.cpp  HMP4040Driver.h  Keithley2400Driver.cpp  Keithley2400Driver.h  Keithley2450Driver.cpp  Keithley2450Driver.h  Keithley2611BDriver.cpp  Keithley2611BDriver.h  Keithley2612ADriver.cpp  Keithley2612ADriver.h  Keithley6487Driver.cpp  Keithley6487Driver.h  Keithley6487Driver.info  PowerDriver.cpp  PowerDriver.h  SerialClient.cpp  SerialClient.h  TCPClient.cpp  TCPClient.h  power.cpp  power_kip_fe.cpp  power_testbench.cpp
midas_fe/pump_scfe/: CMakeLists.txt  pump.cxx  pump.h  pump_scfe.cxx  sps_tcpip.cxx  sps_tcpip.h
midas_fe/registers/: a10_pcie_registers.h  feb_sc_registers.h  mutrig_registers.h
midas_fe/sample_scfe/: CMakeLists.txt  LakeShore336.cxx  LakeShore336.h  bronkhorst.cxx  bronkhorst.h  ets_logout.cxx  ets_logout.h  lem_generic.cxx  lem_generic.h  sample_scfe.cxx  tcpip_rs232.cxx  tcpip_rs232.h  thcd_100.cxx  thcd_100.h
midas_fe/scshv20_scfe/: CMakeLists.txt  linkSVSHV20.json  scshv20.cxx  scshv20.h  scshv20_scfe.cxx
online/: .gitignore
scripts/: README.md  do_ethreshold_scan.py  do_tthreshold_scan.py  noise_scan.py  plot_for_check.ipynb  plot_speedtest.py
tb_int/: BUG_HISTORY.md  DV_BASIC.md  DV_COV.md  DV_CROSS.md  DV_EDGE.md  DV_INT_HARNESS.md  DV_INT_PLAN.md  DV_PROF.md  DV_REPORT.json  DV_REPORT.md  README.md
tests/: CMakeLists.txt  bits_utils_test.cpp  compare_mutrig_config.py  mutrig_config_test.cpp  sample_test.cpp  test_write_tdacs.py
tools/: CMakeLists.txt
tools/firmware/: dmatest.cpp  rw.cpp  sctest.cpp  swb_dma_snapshot.cpp
tools/include/musip/: HitmapFile.hpp  TDACFile.hpp
tools/include/musip/dqm/: BasicHistogram1D.hpp  BasicHistogram2D.hpp  BasicRollingHistogram2D.hpp  DQMManager.hpp  HistogramEncoder.hpp  Metadata.hpp  PlotCollection.hpp  PlotSource.hpp  detail.hpp  dqmfwd.hpp
tools/ip/: check_questa_license.sh  generate_opq_svd.py  lint_rtl.py  opq_jtag_csr.tcl  prepare_questa_ini.sh  refresh_questa_intel_libs.sh  run_questa.sh  sync_opq_from_mu3e_ip_cores.sh
tools/src/: DQMManager.cpp  HistogramEncoder.cpp  HitmapFile.cpp  Metadata.cpp  PlotCollection.cpp  TDACFile.cpp  dqmproxy_main.cpp  plotserver_main.cpp  writetdacs.cpp
(+3769 files in other folders)
